--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" href="./images/186140.png"/>
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet"> 
+    <title>Eco Green</title>
   </head>
   <body>
-    <nav>
+    <header>
+    <img class="logo"src="images/imagelogo.jpg" alt="Logo Eco Green" />
+    <nav class="nav">
       <ul>
-        <li id='home'>Home</li>
-        <li id='login'>Login</li>
+        <li id='home'>
+          <a href="/">Home</a>
+        </li>
+        <li id='login'>
+          <a href="/login">Login</a>
+        </li>
       </ul>
     </nav>
-    <div id="root"></div>
+  </header>
+  <main id="root">
+<div class="loginInit">
+</div>
+  </main>
+  <footer>
+    @Rede Social Eko Green - Alunas laboratoria
+  </footer>
+
+  
     <script type="module" src="router.js"></script>
+
   </body>
 </html>
