Interface, logout, forgot

--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,15 @@
       </ul>
     </nav>
   </header>
-  <main id="root">
-<div class="loginInit">
-</div>
-  </main>
+  <main id="root"></main>
+  
+  <div class="loginInit">
 
-
+    <button class="btn " id="btnGmail">
+      <img src="./images/google.png" width="15px" height="15px"/>
+      Iniciar sessão com o Google
+    </button>
+  
   <form action="Acesso">
 
     <div class="form">
@@ -45,28 +48,36 @@
 
   </form>
 
-  <button class="btn " id="btnCadastrar">
-    Cadastrar
-  </button>
-
-
   <button class="btn " id="btnLogin">
-    Login
+    Entrar
   </button>
+  
+  <ul>
+
+    <li id="btnForgot">
+      <a href="/forgot">Esqueceu a senha?</a>
+    </li>
+    
+    <li id="btnCadastrar">
+      <a href="/cadastro">Não possui conta? Cadastre-se</a>
+    </li>
+   
+
+  </ul>  
 
 
-  <button class="btn " id="btnGmail">
-    Entrar com o Gmail
-  </button>
 
-  <button class="btn " id="btnSair">
+  
+
+  <button class="btn " id="btnLogout">
     Sair
   </button>
 
-  <button class="btn " id="btnHome">
+  <!--<button class="btn " id="btnHome">
     Home
-  </button>
+  </button>-->
 
+</div>
 
   <footer>@Rede Social Eko Green - Alunas laboratoria
   </footer>
