--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
         <li id='login'>
           <a href="/login">Login</a>
         </li>
+        <li id='feed'>
+          <a href="/feed">Feed</a>
+        </li>
+
       </ul>
     </nav>
   </header>
@@ -58,20 +62,14 @@
       <a href="/forgot">Esqueceu a senha?</a>
     </li>
     
-    <li id="btnCadastrar">
-      <a href="/cadastro">Não possui conta? Cadastre-se</a>
+    <li id="btnCadastrar">Não possui conta? 
+      <a href="/cadastro">Cadastre-se</a>
     </li>
    
 
   </ul>  
 
 
-
-  
-
-  <button class="btn " id="btnLogout">
-    Sair
-  </button>
 
   <!--<button class="btn " id="btnHome">
     Home
@@ -116,4 +114,3 @@
 </body>
 
 </html>
-
