--- a/src/index.html
+++ b/src/index.html
@@ -1,116 +1,22 @@
 <!DOCTYPE html>
-
-<html lang="pt-BR">
-  <head>
+<html ng-app="app">
+  <head>lang="en">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="./images/186140.png"/>
     <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet"> 
-    <title>Eco Green</title>
+    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
   </head>
   <body>
-    <header>
-    <img class="logo"src="images/imagelogo.jpg" alt="Logo Eco Green" />
-    <nav class="nav">
+    <nav>
       <ul>
-        <li id='home'>
-          <a href="/">Home</a>
-        </li>
-        <li id='login'>
-          <a href="/login">Login</a>
-        </li>
-        <li id='feed'>
-          <a href="/feed">Feed</a>
-        </li>
-
+        <li id='home'>Home</li>
+        <li id='login'>Login</li>
       </ul>
     </nav>
-  </header>
-  <main id="root"></main>
-  
-  <div class="loginInit">
-
-    <button class="btn " id="btnGmail">
-      <img src="./images/google.png" width="15px" height="15px"/>
-      Iniciar sessão com o Google
-    </button>
-  
-  <form action="Acesso">
-
-    <div class="form">
-      <input type="email" class="acessar" id="email" placeholder="Digite o seu email" autocomplete="off">
-    </div>
-
-    <div class="form">
-      <input type="password" class="acessar" id="senha" placeholder="Senha" autocomplete="off">
-    </div>
-
-  </form>
-
-  <button class="btn " id="btnLogin">
-    Entrar
-  </button>
-  
-  <ul>
-
-    <li id="btnForgot">
-      <a href="/forgot">Esqueceu a senha?</a>
-    </li>
-    
-    <li id="btnCadastrar">Não possui conta? 
-      <a href="/cadastro">Cadastre-se</a>
-    </li>
-   
-
-  </ul>  
-
-
-
-  <!--<button class="btn " id="btnHome">
-    Home
-  </button>-->
-
-</div>
-
-  <footer>@Rede Social Eko Green - Alunas laboratoria
-  </footer>
-
-
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
-
-
-
-  <script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-      apiKey: "AIzaSyA7hVcpjh3HMz0WipRpe2-gZJ1U1i38PU4",
-      authDomain: "rede-social-893e0.firebaseapp.com",
-      projectId: "rede-social-893e0",
-      storageBucket: "rede-social-893e0.appspot.com",
-      messagingSenderId: "332323313520",
-      appId: "1:332323313520:web:1d4c3e0c797716de47a1b5",
-      measurementId: "G-VWNQS3P4HW"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-  </script>
-
-  <script type="module" src="router.js"></script>
-     
-   
-</body>
-
+    <div id="root"></div>
+    <script type="module" src="router.js"></script>
+  </body>
 </html>
