--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
   </head>
   <body>
     <nav>
@@ -18,5 +18,6 @@
     </nav>
     <div id="root"></div>
     <script type="module" src="router.js"></script>
+    <div ng-view>  </div>
   </body>
 </html>
