--- a/src/index.html
+++ b/src/index.html
@@ -28,49 +28,22 @@
        <li id='feed'>
          <a href="/feed">Feed</a>
        </li>
- 
+    
      </ul>
    </nav>
  </header>
  
  
- 
- <!--<button class="btn " id="btnHome">
-   Home
- </button>-->
-
- 
- <!-- The core Firebase JS SDK is always required and must be listed first -->
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
- 
- <!-- TODO: Add SDKs for Firebase products that you want to use
-    https://firebase.google.com/docs/web/setup#available-libraries -->
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
  
- 
- 
- <script>
-   // Your web app's Firebase configuration
-   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-   var firebaseConfig = {
-     apiKey: "AIzaSyA7hVcpjh3HMz0WipRpe2-gZJ1U1i38PU4",
-     authDomain: "rede-social-893e0.firebaseapp.com",
-     projectId: "rede-social-893e0",
-     storageBucket: "rede-social-893e0.appspot.com",
-     messagingSenderId: "332323313520",
-     appId: "1:332323313520:web:1d4c3e0c797716de47a1b5",
-     measurementId: "G-VWNQS3P4HW"
-   };
-   // Initialize Firebase
-   firebase.initializeApp(firebaseConfig);
-   firebase.analytics();
- </script>
  
  <div id="root"></div>
  
  <script type="module" src="router.js"></script>
  <script type="module" src="./services/index.js"></script>
+ <script type="module" src="history.js"></script>
    
 </body>
  
