função deletar/postar

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,19 @@
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+ <!-- include only the Firebase features as you need -->
+ <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-functions.js"></script>
+ 
+ <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-messaging.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-remote-config.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-performance.js"></script>
+ <!-- 
+   initialize the SDK after all desired features are loaded, set useEmulator to false
+   to avoid connecting the SDK to running emulators.
+ -->
+ <script defer src="https://www.gstatic.com/firebasejs/init.js?useEmulator=true"></script>
  
  
  <div id="root"></div>
