--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link type="text/css" rel="stylesheet" href="bower_components/firebaseui/dist/firebaseui.css" />
    <link rel="icon" href="./images/186140.png"/>
    <link rel="stylesheet" href="./style.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -45,15 +46,13 @@
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-remote-config.js"></script>
  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-performance.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-init.js"></script>  
  <!-- 
    initialize the SDK after all desired features are loaded, set useEmulator to false
    to avoid connecting the SDK to running emulators.
  -->
- <script defer src="https://www.gstatic.com/firebasejs/init.js?useEmulator=true"></script>
- 
- 
+
  <div id="root"></div>
- 
  <script type="module" src="router.js"></script>
  <script type="module" src="./services/index.js"></script>
  <script type="module" src="history.js"></script>
