--- a/src/index.html
+++ b/src/index.html
@@ -20,19 +20,25 @@
     <header>
       <img class="logo" src="images/imagelogo.jpg" alt="Logo Eco Green"/>
       <nav class="nav">
-        <ul>
-          <li id="home">
+        <ul class="menu">
+          <!-- <li id="home">
             <a class="one" href="/">Home</a>
           </li>
           <li id="login">
             <a class="two" href="/login">Login</a>
           </li>
           <li id="feed">
-            <a class="three" href="/feed">Feed</a>
-          </li>
+            <a class="three" href="/feed">Feed</a> -->
+
+            <li id='home'><a href="/">Home</a></li>
+            <li id='login'><a href="/login">Login</a></li> 
+            <li id='register'></li><a href="/register">Cadastre-se</a></li>
+            <li id='feed'></li><a href="/feed">Feed</a></li> 
+            
         </ul>
       </nav>
     </header>
+   
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
